# labelx

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
annex/converters/: yolo2coco.py
annex/data/samples/: sample_image.txt  sample_image_coco.json  sample_image_labelme.json
annex/tests/: test_yolo2coco.py
docs/: adapter-sdk.md  architecture.md  development.md  format-matrix.md  schema-v1.md
scripts/: gen_fixtures.py  perf_smoke.py
src/annox/: __init__.py
src/annox/adapters/: base.py
src/annox/adapters/coco/: coco.py
src/annox/adapters/yolo/: yolo.py
src/annox/cli/: main.py
src/annox/core/: __init__.py  convert.py  registry.py  validate.py
src/annox/io/: jsonio.py  maskio.py  parallel.py
src/annox/rust/: __init__.py
src/annox/schema/: __init__.py  dataset.py  geometry.py  panoptic.py
tests/unit/: test_geometry.py  test_parallel.py  test_schema.py
tests/unit/adapters/: test_coco.py
