[build-system]
requires = ["hatchling>=1.20.0"]
build-backend = "hatchling.build"

[project]
name = "annox"
version = "0.1.0a0"
description = "Annotation Exchange Tool: convert vision annotations via a loss-minimizing intermediate schema"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-only" }
authors = [
  { name = "Annox Contributors" }
]
keywords = ["annotation", "dataset", "computer-vision", "coco", "yolo", "voc", "panoptic", "keypoints"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "pydantic>=2.6.0,<3",
  "typing-extensions>=4.7.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.4",
]
rust = []

[project.urls]
Homepage = "https://github.com/fanfeast/annox"
Issues = "https://github.com/fanfeast/annox/issues"

[project.entry-points."console_scripts"]
annox = "annox.cli.main:main"

[project.entry-points."annox.adapters"]
coco = "annox.adapters.coco.coco:COCOAdapter"

[tool.hatch.build]
packages = ["src/annox"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
  "E", "F", "I", "UP"
]
ignore = [
  "E203",
  "E501",
]
